[artf570615] quick link header alignment fixed

--- a/phresco-framework-web/src/main/webapp/theme/red_blue/css/phresco.css
+++ b/phresco-framework-web/src/main/webapp/theme/red_blue/css/phresco.css
@@ -671,6 +671,7 @@ a {
 	position: absolute;
 	width: 350px;
 	z-index: 5;
+	top: 0px;
 }
 
 .headerInnerTop ul {
@@ -756,6 +757,7 @@ a {
 	margin-left: 10%;
 	text-align: center;
 	font-weight: bold;
+	top: 0px;
 }
 
 .quick_links {
